# coil-winder

./: README.org  rust-toolchain.toml  shell.nix
.github/workflows/: firmware.yml  gcode.yml  slicer.yml
client/: Cargo.toml
client/src/: main.rs
doc/: axes.org
firmware/: Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/src/: a4988.rs  driver.rs  home.s  lib.rs  main.rs  motion.rs  server.rs  steps.s  util.rs
firmware/tests/: coil_winder_tests.rs
gcode/: Cargo.toml
gcode/src/: ast.rs  lib.rs  parser.rs
movement/: Cargo.toml
movement/src/: lib.rs  units.rs
parts/: coil winder - belt tensioner.stl  coil winder - carriage.stl  coil winder - chuck.stl  coil winder - collet.stl  coil winder - jaw.stl  coil winder - pvc 90deg bottom.stl  coil winder - pvc 90deg middle.stl  coil winder - pvc 90deg top.stl  coil winder - pvc x axis mount.stl  coil winder - spindle bracket (mirrored).stl  coil winder - spindle bracket.stl  coil winder - x axis bracket.stl  coil winder - y axis motor housing, mirr.stl  coil winder - y axis motor housing.stl  coil winder - z idler bracket.stl  coil winder - z motor bracket.stl
programs/: home.gcode  scramble-wind.gcode
slicer/: deps.edn
slicer/src/: slicer.clj
slicer/test/: slicer_test.clj
src/: main.rs
