[package]
edition = "2021"
name = "coil-winder"
version = "0.1.0"
authors = ["Aspen Smith <root@gws.fyi>"]
resolver = "2"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = { version = "0.1.1" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-usb-logger = { version = "0.5.1" }
usbd-hid = "0.8.2"
embassy-net = { version = "0.7.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version= "0.8.0", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
fixed = "1.29.0"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.8"


embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.11", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.3"
pio = "0.3.0"
rand = { version = "0.9.1", default-features = false }
picoserve = { version = "0.17.1", features = ["defmt", "embassy"] }

# Local dependencies
gcode = { path = "../gcode" }

[profile.release]
debug = 2

# Below configs are here to mute the rust-analyzer error.
# "Can't find crate for 'test'" as this is a no_std project
[[bin]]
name = "coil-winder"
test = false
bench = false

